--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -21,9 +21,22 @@ header.site-header {
 
 		.navbar-collapse {
 			padding-bottom: 20px;
+			padding-left: 20px;
+			width: 100%;
+			position: absolute;
+			top: 112px;
+			z-index: 999;
+			background: #fff;
+			left: 0px;
+			box-shadow: 0 10px 35px 0 rgba(9, 0, 38, 0.1);
 
 			@include media-breakpoint-up(lg) {
-				padding-bottom: 0;
+				padding: 0;
+				position: relative;
+				z-index: 1;
+				box-shadow: none;
+				background: none;
+				top: 0;
 			}
 		}
 
